Removing shared overflow-x for body and main and keep it for body to remove minor site bug

--- a/css/styles.css
+++ b/css/styles.css
@@ -33,6 +33,7 @@ body {
   background-color: var(--color-back);
   color: var(--color-font);
   overflow-y: scroll;
+  overflow-x: hidden;
   font-size: 1.6rem;
 }
 
